finished styling home

--- a/contact-us.html
+++ b/contact-us.html
@@ -50,7 +50,7 @@
           <button type="button" class="about btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">ABOUT US <span class="caret"></span></button> 
           <ul class="dropdown-menu">
             <li><a ui-sref="danny-benmoshe">DANNY BENMOSHE, M.D.</a></li>
-            <li><a ui-sref="medical-forms">Medical Forms</a></li>
+            <li><a href="Medical-Form.pdf" download>Medical Forms</a></li>
             <li><a ui-sref="insurance-providers">Insurance Providers</a></li>
             <li><a ui-sref="disorders-procedures">Disorders/Procedures</a></li>
           </ul>
@@ -123,7 +123,7 @@
             <h4>2001 Santa Monica Blvd, Suite 880 West,<br> Santa Monica, CA 90404</h4><br>
             <h3><u>Make an Appointment</u></h3><br>
             <h4> <span class="glyphicon glyphicon-phone-alt"></span> By Phone: (310) 315-1456</h4><br>
-            <h4>Or with ZocDoc <a href="https://www.zocdoc.com/doctor/danny-benmoshe-md-132541"><img src="images/ZocDoc-logo.jpg" alt="" class="ZocDoc"></a></h4>
+            <h4>Or click this button to book with <button class="btn btn-info"><a href="https://www.zocdoc.com/doctor/danny-benmoshe-md-132541"><img src="images/ZocDoc-logo.jpg" alt="" class="ZocDoc"></a></button></h4>
           </div>
 
           <div class="col-xs-6">
@@ -132,7 +132,8 @@
 
         </div>
       </div>
-      
+
+
     </div><!-- end of wrapper-div -->
 
 
