finished styling about danny page

--- a/contact-us.html
+++ b/contact-us.html
@@ -123,7 +123,7 @@
             <h4>2001 Santa Monica Blvd, Suite 880 West,<br> Santa Monica, CA 90404</h4><br>
             <h3><u>Make an Appointment</u></h3><br>
             <h4> <span class="glyphicon glyphicon-phone-alt"></span> By Phone: (310) 315-1456</h4><br>
-            <h4>Or click this button to book with <button class="btn btn-info"><a href="https://www.zocdoc.com/doctor/danny-benmoshe-md-132541"><img src="images/ZocDoc-logo.jpg" alt="" class="ZocDoc"></a></button></h4>
+            <h4>Or click this button to book with <button class="btn btn-success"><a href="https://www.zocdoc.com/doctor/danny-benmoshe-md-132541"><img src="images/ZocDoc-logo.jpg" alt="" class="ZocDoc"></a></button></h4>
           </div>
 
           <div class="col-xs-6">
