--- a/danny-benmoshe.html
+++ b/danny-benmoshe.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.5.0/flexslider.min.css">
+  <link href='https://fonts.googleapis.com/css?family=Lora|Inconsolata|Pacifico|Architects+Daughter|Bangers|Kaushan+Script|Droid+Sans+Mono|Audiowide|Calligraffitti' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
@@ -30,11 +31,13 @@
 
         </div>
 
-        <div class="col-xs-6 appointment text-right">
+        <div class="col-xs-6 text-right">
 
           <h2>Make an appointment</h2>
-          <h3>(310) 315-1456</h3>
-
+          <h5><span class="glyphicon glyphicon-phone-alt"></span> (310) 315-1456</h5>
+          
+          <h7>Or Click</h7>  <button class="btn btn-success" id="heading-button"><a href="https://www.zocdoc.com/doctor/danny-benmoshe-md-132541"><img src="images/ZocDoc-logo.jpg" alt=""  id="heading-image"></a></button>
+          
         </div>
       </header>
 
@@ -116,9 +119,9 @@
 
       <div class="container">
         <div class="row">
-          <h2 class="text-center"><u><b>ABOUT DR. DANNY BENMOSHE</b></u></h2>
 
           <div class="dannyStory">
+           <h2 class="text-center"><u><b>ABOUT DR. DANNY BENMOSHE</b></u></h2>
 
             <h4 class="col-xs-8">
               Dr. Benmoshe is a board certified Diplomate of the American Academy of Psychiatry and Neurology. He is dedicated to the diagnosis and treatment of all neurological conditions involving both the central and peripheral nervous systems.<br><br>
