--- a/home.html
+++ b/home.html
@@ -36,9 +36,9 @@
 
           <h2>Make an appointment</h2>
           <h5><span class="glyphicon glyphicon-phone-alt"></span> (310) 315-1456</h5>
-          
-          <h7>Or Click</h7>  <button class="btn btn-info" id="heading-button"><a href="https://www.zocdoc.com/doctor/danny-benmoshe-md-132541"><img src="images/ZocDoc-logo.jpg" alt=""  id="heading-image"></a></button>
-          
+
+          <h7>Or Click</h7>  <button class="btn btn-success" id="heading-button"><a href="https://www.zocdoc.com/doctor/danny-benmoshe-md-132541"><img src="images/ZocDoc-logo.jpg" alt=""  id="heading-image"></a></button>
+
         </div>
       </header>
 
