finished font styling

--- a/contact-us.html
+++ b/contact-us.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.5.0/flexslider.min.css">
+   <link href='https://fonts.googleapis.com/css?family=Lora|Inconsolata|Pacifico|Architects+Daughter|Bangers|Kaushan+Script|Droid+Sans+Mono|Audiowide|Calligraffitti' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
@@ -30,11 +31,13 @@
           <h4>Santa Monica, CA 90404</h4>
         </div>
 
-        <div class="col-xs-6 appointment text-right">
+        <div class="col-xs-6 text-right">
 
           <h2>Make an appointment</h2>
-          <h3>(310) 315-1456</h3>
-
+          <h5><span class="glyphicon glyphicon-phone-alt"></span> (310) 315-1456</h5>
+          
+          <h7>Or Click</h7>  <button class="btn btn-success" id="heading-button"><a href="https://www.zocdoc.com/doctor/danny-benmoshe-md-132541"><img src="images/ZocDoc-logo.jpg" alt=""  id="heading-image"></a></button>
+          
         </div>
       </header>
 
@@ -119,11 +122,11 @@
           <h1 class="text-center"><u>Contact us</u></h1><br>
 
           <div class="address-contact col-xs-6">
-            <h3><b>Danny Benmoshe, M.D.</b></h3>
-            <h4>2001 Santa Monica Blvd, Suite 880 West,<br> Santa Monica, CA 90404</h4><br>
-            <h3><u>Make an Appointment</u></h3><br>
-            <h4> <span class="glyphicon glyphicon-phone-alt"></span> By Phone: (310) 315-1456</h4><br>
-            <h4>Or click this button to book with <button class="btn btn-success"><a href="https://www.zocdoc.com/doctor/danny-benmoshe-md-132541"><img src="images/ZocDoc-logo.jpg" alt="" class="ZocDoc"></a></button></h4>
+            <h3 class="text-center"><b>Danny Benmoshe, M.D.</b></h3>
+            <h4 class="text-center">2001 Santa Monica Blvd, Suite 880 West,<br> Santa Monica, CA 90404</h4><br>
+            <h3 class="text-center"><u>Make an Appointment</u></h3><br>
+            <h4 class="text-center"> <span class="glyphicon glyphicon-phone-alt"></span> By Phone: (310) 315-1456</h4><br>
+            <h4 class="text-center">Or click this button to book with <button class="btn btn-success"><a href="https://www.zocdoc.com/doctor/danny-benmoshe-md-132541"><img src="images/ZocDoc-logo.jpg" alt="" class="ZocDoc"></a></button></h4>
           </div>
 
           <div class="col-xs-6">
