--- a/useful-links.html
+++ b/useful-links.html
@@ -35,11 +35,13 @@
 
         </div>
 
-        <div class="col-xs-6 appointment text-right">
+       <div class="col-xs-6 text-right">
 
           <h2>Make an appointment</h2>
-          <h3>(310) 315-1456</h3>
-
+          <h5><span class="glyphicon glyphicon-phone-alt"></span> (310) 315-1456</h5>
+          
+          <h7>Or Click</h7>  <button class="btn btn-success" id="heading-button"><a href="https://www.zocdoc.com/doctor/danny-benmoshe-md-132541"><img src="images/ZocDoc-logo.jpg" alt=""  id="heading-image"></a></button>
+          
         </div>
       </header>
 
