--- a/reviews.html
+++ b/reviews.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.5.0/flexslider.min.css">
+  <link href='https://fonts.googleapis.com/css?family=Lora|Inconsolata|Pacifico|Architects+Daughter|Bangers|Kaushan+Script|Droid+Sans+Mono|Audiowide|Calligraffitti' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
@@ -30,11 +31,13 @@
 
         </div>
 
-        <div class="col-xs-6 appointment text-right">
+        <div class="col-xs-6 text-right">
 
           <h2>Make an appointment</h2>
-          <h3>(310) 315-1456</h3>
-
+          <h5><span class="glyphicon glyphicon-phone-alt"></span> (310) 315-1456</h5>
+          
+          <h7>Or Click</h7>  <button class="btn btn-success" id="heading-button"><a href="https://www.zocdoc.com/doctor/danny-benmoshe-md-132541"><img src="images/ZocDoc-logo.jpg" alt=""  id="heading-image"></a></button>
+          
         </div>
       </header>
 
@@ -118,30 +121,30 @@
 
         <div class="row"><br>
 
-          <h2 class="text-center">Reviews of Dr. Benmoshe</h2><br>
+          <h2 class="text-center"><u>Reviews of Dr. Benmoshe</u></h2><br>
           <img src="images/danny-patient.jpg" alt="" class="review-image col-xs-6">
-          <h4 class="col-xs-6"><u class="patient-review">Aug 2nd, 2015</u> - I've been a patient of Dr. Benmoshe's for four years. He's an excellent doctor: very thorough, follows through, and returns phone calls. Just a nice guy overall, as well.<br>
-            <a href="http://www.vitals.com/doctors/Dr_Danny_Benmoshe/reviews">See actual review on Vitals Site</a>
+          <h4 class="col-xs-6"><u class="patient-review">Aug 2nd, 2015</u><span class="review-text"> - I've been a patient of Dr. Benmoshe's for four years. He's an excellent doctor: very thorough, follows through, and returns phone calls. Just a nice guy overall, as well.</span><br>
+            <a href="http://www.vitals.com/doctors/Dr_Danny_Benmoshe/reviews" class="review-link">See actual review on Vitals Site</a>
           </h4>
 
-          <h4 class="col-xs-6"><u class="patient-review">by Lynn on Jan 18th, 2014</u> - This doctor and his nurse, Sarah, went out of their way to go the extra mile for my care and comfort. Willing to think outside the box. I appreciate them very much and yes, I would recommend them.<br>
-            <a href="http://www.vitals.com/doctors/Dr_Danny_Benmoshe/reviews">See actual review on Vitals Site</a>
+          <h4 class="col-xs-6"><u class="patient-review">by Lynn on Jan 18th, 2014</u><span class="review-text"> - This doctor and his nurse, Sarah, went out of their way to go the extra mile for my care and comfort. Willing to think outside the box. I appreciate them very much and yes, I would recommend them.</span><br>
+            <a href="http://www.vitals.com/doctors/Dr_Danny_Benmoshe/reviews" class="review-link">See actual review on Vitals Site</a>
           </h4>
 
-          <h4 class="col-xs-6"><u class="patient-review">Mar 5th, 2012</u> - I found Dr. Benmoshe to be a very caring doctor. He takes his time with me, and listens carefully to what I have to say. He is willing to try alternatives, such as dietary supplements, for treatment of my migraines, as well as more conventional medication and treatment. I find him also to he very personable.<br>
-            <a href="http://www.vitals.com/doctors/Dr_Danny_Benmoshe/reviews">See actual review on Vitals Site</a>
+          <h4 class="col-xs-6"><u class="patient-review">Mar 5th, 2012</u><span class="review-text"> - I found Dr. Benmoshe to be a very caring doctor. He takes his time with me, and listens carefully to what I have to say. He is willing to try alternatives, such as dietary supplements, for treatment of my migraines, as well as more conventional medication and treatment. I find him also to he very personable.</span><br>
+            <a href="http://www.vitals.com/doctors/Dr_Danny_Benmoshe/reviews" class="review-link">See actual review on Vitals Site</a>
           </h4>
 
-          <h4 class="col-xs-12"><u class="patient-review">August 14, 2015 by Rene R. (Verified Patient)</u> - Can't recommend Dr. Benmoshe enough. He was able to squeeze me in right away and was very patient in answering all my questions and concerns. Was very thorough in going over my symptoms and medical history and not once did I feel like he was in a rush. Overall a great experience.<br>
-            <a href="https://www.zocdoc.com/doctor/danny-benmoshe-md-132541">See actual review on ZocDoc Site</a>
+          <h4 class="col-xs-12"><u class="patient-review">August 14, 2015 by Rene R. (Verified Patient)</u><span class="review-text"> - Can't recommend Dr. Benmoshe enough. He was able to squeeze me in right away and was very patient in answering all my questions and concerns. Was very thorough in going over my symptoms and medical history and not once did I feel like he was in a rush. Overall a great experience.</span><br>
+            <a href="https://www.zocdoc.com/doctor/danny-benmoshe-md-132541" class="review-link">See actual review on ZocDoc Site</a>
           </h4>
 
-          <h4 class="col-xs-12"><u class="patient-review">by Joan C.</u> - Very impressed with my care w/ Dr. Benmoshe His concise, professional and caring manner was exceptional. He was the Dr. who actually saved my life. A statement I don't think I have ever said about another Dr. I plan on keeping Dr. Benmoshe as my Dr. from here on!<br>
-            <a href="https://www.zocdoc.com/doctor/danny-benmoshe-md-132541">See actual review on ZocDoc Site</a>
+          <h4 class="col-xs-12"><u class="patient-review">by Joan C.</u><span class="review-text"> - Very impressed with my care w/ Dr. Benmoshe His concise, professional and caring manner was exceptional. He was the Dr. who actually saved my life. A statement I don't think I have ever said about another Dr. I plan on keeping Dr. Benmoshe as my Dr. from here on!</span><br>
+            <a href="https://www.zocdoc.com/doctor/danny-benmoshe-md-132541" class="review-link">See actual review on ZocDoc Site</a>
           </h4>
 
-          <h4 class="col-xs-12"><u class="patient-review">9/24/15, by Chris G.</u> - I found Dr. Benmoshe to be very thorough, precise, and kind when I went to him for my constant migraines. He even few joked around with me the whole visit so I would feel more comfortable. He took all the time that was necessary to understand when and why my migraines occur until he was able to pinpoint the exact problem and fix it. I've already recommended him to all my friends and family members. Thanks doc!<br>
-            <a href="http://www.yelp.com/biz/danny-benmoshe-md-santa-monica?fsid=VL9C5RKYuij2q8xajZ4Org">See actual review on Yelp</a>
+          <h4 class="col-xs-12"><u class="patient-review">9/24/15, by Chris G.</u><span class="review-text"> - I found Dr. Benmoshe to be very thorough, precise, and kind when I went to him for my constant migraines. He even few joked around with me the whole visit so I would feel more comfortable. He took all the time that was necessary to understand when and why my migraines occur until he was able to pinpoint the exact problem and fix it. I've already recommended him to all my friends and family members. Thanks doc!</span><br>
+            <a href="http://www.yelp.com/biz/danny-benmoshe-md-santa-monica?fsid=VL9C5RKYuij2q8xajZ4Org" class="review-link">See actual review on Yelp</a>
           </h4>
 
         </div><!-- end of row div -->
