finished headaches page

--- a/sleep-apnea.html
+++ b/sleep-apnea.html
@@ -116,99 +116,99 @@
           })
         </script>
 
-<h1 class="text-center"><u>Chronic Disorders of Conciousness</u></h1>
+<h1 class="text-center"><u>Overview of Headaches</u></h1>
 
 <div class="flexslider">
   <ul class="slides">
     <li>
-      <img src="images/Conciousness/Slide1.png" class="presentaion-image" />
+      <img src="images/Headaches/Slide1.png" class="presentaion-image" />
     </li>
     <li>
-      <img src="images/Conciousness/Slide2.png" class="presentaion-image"/>
+      <img src="images/Headaches/Slide2.png" class="presentaion-image"/>
     </li>
     <li>
-      <img src="images/Conciousness/Slide3.png" class="presentaion-image"/>
+      <img src="images/Headaches/Slide3.png" class="presentaion-image"/>
     </li>
     <li>
-      <img src="images/Conciousness/Slide5.png" class="presentaion-image"/>
+      <img src="images/Headaches/Slide5.png" class="presentaion-image"/>
     </li>
     <li>
-      <img src="images/Conciousness/Slide6.png" class="presentaion-image"/>
+      <img src="images/Headaches/Slide6.png" class="presentaion-image"/>
     </li>
     <li>
-      <img src="images/Conciousness/Slide7.png" class="presentaion-image"/>
+      <img src="images/Headaches/Slide7.png" class="presentaion-image"/>
     </li>
     <li>
-      <img src="images/Conciousness/Slide8.png" class="presentaion-image"/>
+      <img src="images/Headaches/Slide8.png" class="presentaion-image"/>
     </li>
     <li>
-      <img src="images/Conciousness/Slide9.png" class="presentaion-image"/>
+      <img src="images/Headaches/Slide9.png" class="presentaion-image"/>
     </li>
     <li>
-      <img src="images/Conciousness/Slide10.png" class="presentaion-image"/>
+      <img src="images/Headaches/Slide10.png" class="presentaion-image"/>
     </li>
     <li>
-      <img src="images/Conciousness/Slide11.png" class="presentaion-image"/>
+      <img src="images/Headaches/Slide11.png" class="presentaion-image"/>
     </li>
     <li>
-      <img src="images/Conciousness/Slide12.png" class="presentaion-image"/>
+      <img src="images/Headaches/Slide12.png" class="presentaion-image"/>
     </li>
     <li>
-      <img src="images/Conciousness/Slide13.png" class="presentaion-image"/>
+      <img src="images/Headaches/Slide13.png" class="presentaion-image"/>
     </li>
     <li>
-      <img src="images/Conciousness/Slide14.png" class="presentaion-image"/>
+      <img src="images/Headaches/Slide14.png" class="presentaion-image"/>
     </li>
     <li>
-      <img src="images/Conciousness/Slide15.png" class="presentaion-image"/>
+      <img src="images/Headaches/Slide15.png" class="presentaion-image"/>
     </li>
     <li>
-      <img src="images/Conciousness/Slide16.png" class="presentaion-image"/>
+      <img src="images/Headaches/Slide16.png" class="presentaion-image"/>
     </li>
     <li>
-      <img src="images/Conciousness/Slide17.png" class="presentaion-image"/>
+      <img src="images/Headaches/Slide17.png" class="presentaion-image"/>
     </li>
     <li>
-      <img src="images/Conciousness/Slide18.png" class="presentaion-image"/>
+      <img src="images/Headaches/Slide18.png" class="presentaion-image"/>
     </li>
     <li>
-      <img src="images/Conciousness/Slide19.png" class="presentaion-image"/>
+      <img src="images/Headaches/Slide19.png" class="presentaion-image"/>
     </li>
     <li>
-      <img src="images/Conciousness/Slide20.png" class="presentaion-image"/>
+      <img src="images/Headaches/Slide20.png" class="presentaion-image"/>
     </li>
     <li>
-      <img src="images/Conciousness/Slide21.png" class="presentaion-image"/>
+      <img src="images/Headaches/Slide21.png" class="presentaion-image"/>
     </li>
     <li>
-      <img src="images/Conciousness/Slide22.png" class="presentaion-image"/>
+      <img src="images/Headaches/Slide22.png" class="presentaion-image"/>
     </li>
     <li>
-      <img src="images/Conciousness/Slide23.png" class="presentaion-image"/>
+      <img src="images/Headaches/Slide23.png" class="presentaion-image"/>
     </li>
     <li>
-      <img src="images/Conciousness/Slide24.png" class="presentaion-image"/>
+      <img src="images/Headaches/Slide24.png" class="presentaion-image"/>
     </li>
     <li>
-      <img src="images/Conciousness/Slide25.png" class="presentaion-image"/>
+      <img src="images/Headaches/Slide25.png" class="presentaion-image"/>
     </li>
     <li>
-      <img src="images/Conciousness/Slide26.png" class="presentaion-image"/>
+      <img src="images/Headaches/Slide26.png" class="presentaion-image"/>
     </li>
     <li>
-      <img src="images/Conciousness/Slide27.png" class="presentaion-image"/>
+      <img src="images/Headaches/Slide27.png" class="presentaion-image"/>
     </li>
     <li>
-      <img src="images/Conciousness/Slide28.png" class="presentaion-image"/>
+      <img src="images/Headaches/Slide28.png" class="presentaion-image"/>
     </li>
     <li>
-      <img src="images/Conciousness/Slide29.png" class="presentaion-image"/>
+      <img src="images/Headaches/Slide29.png" class="presentaion-image"/>
     </li>
     <li>
-      <img src="images/Conciousness/Slide30.png" class="presentaion-image"/>
+      <img src="images/Headaches/Slide30.png" class="presentaion-image"/>
     </li>
     <li>
-      <img src="images/Conciousness/Slide31.png" class="presentaion-image"/>
+      <img src="images/Headaches/Slide31.png" class="presentaion-image"/>
     </li>
   </ul>
 </div>
@@ -225,7 +225,7 @@ $(window).load(function() {
 
 <ul class="text-center" id="presentaion-ul">
   <li><a href="#" class="presentation-link">View a presentaion on Obstructive Sleep Apnea</a></li>  
-  <li><a href="#" class="presentation-link">View an Overview of Headaches Presentaion</a></li>
+  <li><a href="#" class="presentation-link">View a presentation on the Chronic Disorders of Conciousness</a></li>
 
 </ul>
 
