--- a/disorders-procedures.html
+++ b/disorders-procedures.html
@@ -24,8 +24,8 @@
         <div class="col-xs-6 name-address">
 
           <h2>Danny Benmoshe, M.D. | Neurologist</h2>
-          <h4>2001 Santa Monica Blvd, Suite 880 West,</h4>
-          <h4>Santa Monica, CA 90404</h4>
+          <h3>2001 Santa Monica Blvd, Suite 880 West,</h3>
+          <h3>Santa Monica, CA 90404</h3>
 
         </div>
 
@@ -35,7 +35,7 @@
           <h5><span class="glyphicon glyphicon-phone-alt"></span> (310) 315-1456</h5>
           
           <h7>Or Click</h7>  <button class="btn btn-success" id="heading-button"><a href="https://www.zocdoc.com/doctor/danny-benmoshe-md-132541"><img src="images/ZocDoc-logo.jpg" alt=""  id="heading-image"></a></button>
-          
+          <p id="espanol">Se habla espñol</p>
         </div>
       </header>
 
