--- a/home.html
+++ b/home.html
@@ -26,8 +26,8 @@
         <div class="col-xs-6 name-address">
 
           <h2>Danny Benmoshe, M.D. | Neurologist</h2>
-          <h4>2001 Santa Monica Blvd, Suite 880 West,</h4>
-          <h4>Santa Monica, CA 90404</h4>
+          <h3>2001 Santa Monica Blvd, Suite 880 West,</h3>
+          <h3>Santa Monica, CA 90404</h3>
 
         </div>
 
@@ -37,7 +37,7 @@
           <h5><span class="glyphicon glyphicon-phone-alt"></span> (310) 315-1456</h5>
 
           <h7>Or Click</h7>  <button class="btn btn-success" id="heading-button"><a href="https://www.zocdoc.com/doctor/danny-benmoshe-md-132541"><img src="images/ZocDoc-logo.jpg" alt=""  id="heading-image"></a></button>
-
+          <p id="espanol">Se habla espñol</p>
         </div>
       </header>
 
@@ -52,7 +52,7 @@
         <div class="btn-group" role="group">
           <button type="button" class="about btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">ABOUT US <span class="caret"></span></button> 
           <ul class="dropdown-menu">
-            <li><a ui-sref="danny-benmoshe">DANNY BENMOSHE, M.D.</a></li>
+            <li><a href="../DocDanny3/danny-benmoshe.html">DANNY BENMOSHE, M.D.</a></li>
             <li><a href="Medical-Form.pdf" download>Medical Forms</a></li>
             <li><a ui-sref="insurance-providers">Insurance Providers</a></li>
             <li><a ui-sref="disorders-procedures">Disorders/Procedures</a></li>
@@ -63,7 +63,7 @@
           <button type="button" class="useful-links btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">PATIENT INFORMATION <span class="caret"></span></button>
           <ul class="dropdown-menu">
             <li><a ui-sref="useful-links">Useful Links</a></li>
-            <li><a ui-sref="presentations">Presentations</a></li>
+            <li><a href="../DocDanny3/presentations-conciousness.html">Presentations</a></li>
           </ul>
           
         </div>
