changed slider images

--- a/contact-us.html
+++ b/contact-us.html
@@ -83,32 +83,22 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
           <div class="item active">
-            <img src="images/image1.jpg" class="pic" alt="...">
-            <div class="carousel-caption">
-              <h3>Pay Me Money</h3>
-            </div>
+            <img src="images/neuron-anatomy-slider.png" id="pic" alt="anatomy of a neuron">
           </div>
           <div class="item">
-            <img src="images/image2.jpg" alt="...">
-            <div class="carousel-caption">
-              <h3>Pay Me Money</h3>
-            </div>
+            <img src="images/brain-scan-slider.jpg" alt="images of a scanned brain" id="pic">
           </div>
           <div class="item">
-            <img src="images/image3.jpg" alt="...">
-            <div class="carousel-caption">
-              <h3>Pay Me Money</h3>
-            </div>
+            <img src="images/office-waiting-room.jpg" alt="image of the office waiting room" id="pic">
           </div>
         </div>
 
         <!-- Controls -->
-        <a class="left carousel-control"  role="button" data-slide="prev">
+        <a class="carousel-control"  role="button" data-slide="prev">
         </a>
-        <a class="right carousel-control"  role="button" data-slide="next">
+        <a class="carousel-control"  role="button" data-slide="next">
         </a>
       </div> <!-- Carousel -->
-
       <script>
         $('.carousel').carousel({
           interval: 3000
