--- a/home.html
+++ b/home.html
@@ -46,76 +46,67 @@
 
         <div class="btn-group" role="group">
 
-          <a ui-sref="home({reload: true})" ><button type="button" class="home btn btn-info">HOME<span class="glyphicon glyphicon-home"></span></button></a>
+          <a href="http://www.drbenmoshe.com/home.html" ><button type="button" class="home btn btn-info">HOME<span class="glyphicon glyphicon-home"></span></button></a>
         </div>
 
         <div class="btn-group" role="group">
           <button type="button" class="about btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">ABOUT US <span class="caret"></span></button> 
           <ul class="dropdown-menu">
-            <li><a href="../DocDanny3/danny-benmoshe.html">DANNY BENMOSHE, M.D.</a></li>
+            <li><a href="http://www.drbenmoshe.com/danny-benmoshe.html">DANNY BENMOSHE, M.D.</a></li>
             <li><a href="Medical-Form.pdf" download>Medical Forms</a></li>
-            <li><a ui-sref="insurance-providers">Insurance Providers</a></li>
-            <li><a ui-sref="disorders-procedures">Disorders/Procedures</a></li>
+            <li><a href="http://www.drbenmoshe.com/insurance-providers.html">Insurance Providers</a></li>
+            <li><a href="http://www.drbenmoshe.com/disorders-procedures.html">Disorders/Procedures</a></li>
           </ul>
         </div>
 
         <div class="btn-group" role="group">
           <button type="button" class="useful-links btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">PATIENT INFORMATION <span class="caret"></span></button>
           <ul class="dropdown-menu">
-            <li><a ui-sref="useful-links">Useful Links</a></li>
-            <li><a href="../DocDanny3/presentations-conciousness.html">Presentations</a></li>
+            <li><a href="http://www.drbenmoshe.com/useful-links.html">Useful Links</a></li>
+            <li><a href="http://www.drbenmoshe.com/presentations-conciousness.html">Presentations</a></li>
           </ul>
           
         </div>
 
         <div class="btn-group" role="group">
-          <a ui-sref="reviews"><button type="button" class="reviews btn btn-info">REVIEWS</button></a>
+          <a href="http://www.drbenmoshe.com/reviews.html"><button type="button" class="reviews btn btn-info">REVIEWS</button></a>
         </div>
 
         <div class="btn-group" role="group">
-          <a ui-sref="contact-us"><button type="button" class="contact-us btn btn-info">CONTACT US</button></a>
+          <a href="http://www.drbenmoshe.com/contact-us.html"><button type="button" class="contact-us btn btn-info">CONTACT US</button></a>
         </div>
 
       </div><!-- end of btn-group div -->
 
-      <!-- beginning of carosel code -->
+           <!-- beginning of carosel code -->
 
       <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="3500">
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
           <div class="item active">
-            <img src="images/image1.jpg" class="pic" alt="...">
-            <div class="carousel-caption">
-              <h3>Pay Me Money</h3>
-            </div>
+            <img src="images/neuron-anatomy-slider.png" id="pic" alt="anatomy of a neuron">
           </div>
           <div class="item">
-            <img src="images/image2.jpg" alt="...">
-            <div class="carousel-caption">
-              <h3>Pay Me Money</h3>
-            </div>
+            <img src="images/brain-scan-slider.jpg" alt="images of a scanned brain" id="pic">
           </div>
           <div class="item">
-            <img src="images/image3.jpg" alt="...">
-            <div class="carousel-caption">
-              <h3>Pay Me Money</h3>
-            </div>
+            <img src="images/office-waiting-room.jpg" alt="image of the office waiting room" id="pic">
           </div>
         </div>
 
         <!-- Controls -->
-        <a class="left carousel-control"  role="button" data-slide="prev">
+        <a class="carousel-control"  role="button" data-slide="prev">
         </a>
-        <a class="right carousel-control"  role="button" data-slide="next">
+        <a class="carousel-control"  role="button" data-slide="next">
         </a>
       </div> <!-- Carousel -->
-
       <script>
         $('.carousel').carousel({
           interval: 3000
         })
       </script>
+
       
 
       <div class="container">
@@ -145,10 +136,10 @@
   <!-- bread crumbs code -->
   <div class="breadCrumbs text-center">
 
-    <a ui-sref="home" class="col-xs-3 breadCrumbs-links">Home</a>
-    <a ui-sref="danny-benmoshe" class="col-xs-3">About Us</a>
-    <a ui-sref="reviews" class="col-xs-3">Reviews</a>
-    <a ui-sref="contact-us" class="col-xs-3">Contact Us</a>
+    <a href="http://www.drbenmoshe.com/home.html" class="col-xs-3 breadCrumbs-links">Home</a>
+    <a href="http://www.drbenmoshe.com/danny-benmoshe.html" class="col-xs-3">About Us</a>
+    <a href="http://www.drbenmoshe.com/reviews.html" class="col-xs-3">Reviews</a>
+    <a href="http://www.drbenmoshe.com/contact-us.html" class="col-xs-3">Contact Us</a>
 
   </div><!-- end of breadCrumbs div -->
 
