--- a/reviews.html
+++ b/reviews.html
@@ -77,45 +77,35 @@
 
       </div><!-- end of btn-group div -->
 
-      <!-- beginning of carosel code -->
+           <!-- beginning of carosel code -->
 
       <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="3500">
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
           <div class="item active">
-            <img src="images/image1.jpg" class="pic" alt="...">
-            <div class="carousel-caption">
-              <h3>Pay Me Money</h3>
-            </div>
+            <img src="images/neuron-anatomy-slider.png" id="pic" alt="anatomy of a neuron">
           </div>
           <div class="item">
-            <img src="images/image2.jpg" alt="...">
-            <div class="carousel-caption">
-              <h3>Pay Me Money</h3>
-            </div>
+            <img src="images/brain-scan-slider.jpg" alt="images of a scanned brain" id="pic">
           </div>
           <div class="item">
-            <img src="images/image3.jpg" alt="...">
-            <div class="carousel-caption">
-              <h3>Pay Me Money</h3>
-            </div>
+            <img src="images/office-waiting-room.jpg" alt="image of the office waiting room" id="pic">
           </div>
         </div>
 
         <!-- Controls -->
-        <a class="left carousel-control"  role="button" data-slide="prev">
+        <a class="carousel-control"  role="button" data-slide="prev">
         </a>
-        <a class="right carousel-control"  role="button" data-slide="next">
+        <a class="carousel-control"  role="button" data-slide="next">
         </a>
       </div> <!-- Carousel -->
-
       <script>
         $('.carousel').carousel({
           interval: 3000
         })
       </script>
-      <!-- Does Danny want the links to open on new tab or regular? Also, what does he mean when he wants a section called "leave a review?" -->
+
       <div class="container">
 
         <div class="row"><br>
@@ -123,27 +113,27 @@
           <h2 class="text-center"><u>Reviews of Dr. Benmoshe</u></h2><br>
           <img src="images/danny-patient.jpg" alt="" class="review-image col-xs-6">
           <h4 class="col-xs-6"><u class="patient-review">Aug 2nd, 2015</u><span class="review-text"> - I've been a patient of Dr. Benmoshe's for four years. He's an excellent doctor: very thorough, follows through, and returns phone calls. Just a nice guy overall, as well.</span><br>
-            <a href="http://www.vitals.com/doctors/Dr_Danny_Benmoshe/reviews" class="review-link">See actual review on Vitals Site</a>
+            <a href="http://www.vitals.com/doctors/Dr_Danny_Benmoshe/reviews" class="review-link" target="_blank">See actual review on Vitals Site</a>
           </h4>
 
           <h4 class="col-xs-6"><u class="patient-review">by Lynn on Jan 18th, 2014</u><span class="review-text"> - This doctor and his nurse, Sarah, went out of their way to go the extra mile for my care and comfort. Willing to think outside the box. I appreciate them very much and yes, I would recommend them.</span><br>
-            <a href="http://www.vitals.com/doctors/Dr_Danny_Benmoshe/reviews" class="review-link">See actual review on Vitals Site</a>
+            <a href="http://www.vitals.com/doctors/Dr_Danny_Benmoshe/reviews" class="review-link" target="_blank">See actual review on Vitals Site</a>
           </h4>
 
           <h4 class="col-xs-6"><u class="patient-review">Mar 5th, 2012</u><span class="review-text"> - I found Dr. Benmoshe to be a very caring doctor. He takes his time with me, and listens carefully to what I have to say. He is willing to try alternatives, such as dietary supplements, for treatment of my migraines, as well as more conventional medication and treatment. I find him also to he very personable.</span><br>
-            <a href="http://www.vitals.com/doctors/Dr_Danny_Benmoshe/reviews" class="review-link">See actual review on Vitals Site</a>
+            <a href="http://www.vitals.com/doctors/Dr_Danny_Benmoshe/reviews" class="review-link" target="_blank">See actual review on Vitals Site</a>
           </h4>
 
           <h4 class="col-xs-12"><u class="patient-review">August 14, 2015 by Rene R. (Verified Patient)</u><span class="review-text"> - Can't recommend Dr. Benmoshe enough. He was able to squeeze me in right away and was very patient in answering all my questions and concerns. Was very thorough in going over my symptoms and medical history and not once did I feel like he was in a rush. Overall a great experience.</span><br>
-            <a href="https://www.zocdoc.com/doctor/danny-benmoshe-md-132541" class="review-link">See actual review on ZocDoc Site</a>
+            <a href="https://www.zocdoc.com/doctor/danny-benmoshe-md-132541" class="review-link" target="_blank">See actual review on ZocDoc Site</a>
           </h4>
 
           <h4 class="col-xs-12"><u class="patient-review">by Joan C.</u><span class="review-text"> - Very impressed with my care w/ Dr. Benmoshe His concise, professional and caring manner was exceptional. He was the Dr. who actually saved my life. A statement I don't think I have ever said about another Dr. I plan on keeping Dr. Benmoshe as my Dr. from here on!</span><br>
-            <a href="https://www.zocdoc.com/doctor/danny-benmoshe-md-132541" class="review-link">See actual review on ZocDoc Site</a>
+            <a href="https://www.zocdoc.com/doctor/danny-benmoshe-md-132541" class="review-link" target="_blank">See actual review on ZocDoc Site</a>
           </h4>
 
           <h4 class="col-xs-12"><u class="patient-review">9/24/15, by Chris G.</u><span class="review-text"> - I found Dr. Benmoshe to be very thorough, precise, and kind when I went to him for my constant migraines. He even few joked around with me the whole visit so I would feel more comfortable. He took all the time that was necessary to understand when and why my migraines occur until he was able to pinpoint the exact problem and fix it. I've already recommended him to all my friends and family members. Thanks doc!</span><br>
-            <a href="http://www.yelp.com/biz/danny-benmoshe-md-santa-monica?fsid=VL9C5RKYuij2q8xajZ4Org" class="review-link">See actual review on Yelp</a>
+            <a href="http://www.yelp.com/biz/danny-benmoshe-md-santa-monica?fsid=VL9C5RKYuij2q8xajZ4Org" class="review-link" target="_blank">See actual review on Yelp</a>
           </h4>
 
         </div><!-- end of row div -->
