--- a/useful-links.html
+++ b/useful-links.html
@@ -12,10 +12,6 @@
   <link rel="stylesheet" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  <!-- Google map js
-  <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script>
-  <script type='text/javascript' src='https://embedmaps.com/google-maps-authorization/script.js?id=4cc916e494c712c3a1e647defeec625176215a0f'></script>
--->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.5.0/jquery.flexslider-min.js"></script>
 </head>
 
@@ -88,35 +84,26 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
           <div class="item active">
-            <img src="images/image1.jpg" class="pic" alt="...">
-            <div class="carousel-caption">
-              <h3>Pay Me Money</h3>
-            </div>
+            <img src="images/neuron-anatomy-slider.png" id="pic" alt="anatomy of a neuron">
           </div>
           <div class="item">
-            <img src="images/image2.jpg" alt="...">
-            <div class="carousel-caption">
-              <h3>Pay Me Money</h3>
-            </div>
+            <img src="images/brain-scan-slider.jpg" alt="images of a scanned brain" id="pic">
           </div>
           <div class="item">
-            <img src="images/image3.jpg" alt="...">
-            <div class="carousel-caption">
-              <h3>Pay Me Money</h3>
-            </div>
+            <img src="images/office-waiting-room.jpg" alt="image of the office waiting room" id="pic">
           </div>
         </div>
 
         <!-- Controls -->
-        <a class="left carousel-control"  role="button" data-slide="prev">
+        <a class="carousel-control"  role="button" data-slide="prev">
         </a>
-        <a class="right carousel-control"  role="button" data-slide="next">
+        <a class="carousel-control"  role="button" data-slide="next">
         </a>
       </div> <!-- Carousel -->
 
       <script>
         $('.carousel').carousel({
-          interval: 3000
+          interval:3000
         })
       </script>
       <div class="container">
@@ -128,11 +115,11 @@
           <div class="links-rows col-xs-6">
 
             <ul><!-- check if Danny wants links not painted in blue -->
-              <li><a href="http://patients.aan.com/">AMERICAN ACADEMY OF NEUROLOGY INFORMATION FOR PATIENTS</li><!-- find out if Danny wants to open new tabs on links -->
-              <li><a href="http://www.achenet.org/resources/information_for_patients/">AMERICAN HEADACHE SOCIETY</li>
-              <li><a href="http://www.nationalmssociety.org/For-Professionals/Clinical-Care/Patient-Resources">NATIONAL MS SOCIETY</li>
-              <li><a href="http://www.alz.org/">ALZHEIMER’S ASSOCIATION</li>
-              <li><a href="http://www.pdf.org/">PARKINSON’S DISEASE FOUNDATION</li>
+              <li><a href="http://patients.aan.com/" target="_blank">AMERICAN ACADEMY OF NEUROLOGY INFORMATION FOR PATIENTS</li><!-- find out if Danny wants to open new tabs on links -->
+              <li><a href="http://www.achenet.org/resources/information_for_patients/" target="_blank">AMERICAN HEADACHE SOCIETY</li>
+              <li><a href="http://www.nationalmssociety.org/For-Professionals/Clinical-Care/Patient-Resources" target="_blank">NATIONAL MS SOCIETY</li>
+              <li><a href="http://www.alz.org/" target="_blank">ALZHEIMER’S ASSOCIATION</li>
+              <li><a href="http://www.pdf.org/" target="_blank">PARKINSON’S DISEASE FOUNDATION</li>
             </ul>
             
           </div>
@@ -140,11 +127,11 @@
           <div class="links-rows col-xs-6">
 
             <ul>
-              <li><a href="http://www.epilepsy.com/">EPILEPSY FOUNDATION</li><!-- find out if Danny wants to open new tabs on links -->
-              <li><a href="http://www.stroke.org/">NATIONAL STROKE ASSOCIATION</li>
-              <li><a href="https://www.foundationforpn.org/">THE FOUNDATION FOR PERIPHERAL NEUROPATHY</li>
-              <li><a href="https://www.braintrauma.org/">THE BRAIN TRAUMA FOUNDATION</li>
-              <li><a href="http://www.alsa.org/">ALS ASSOCIATION</li>
+              <li><a href="http://www.epilepsy.com/" target="_blank">EPILEPSY FOUNDATION</li><!-- find out if Danny wants to open new tabs on links -->
+              <li><a href="http://www.stroke.org/" target="_blank">NATIONAL STROKE ASSOCIATION</li>
+              <li><a href="https://www.foundationforpn.org/" target="_blank">THE FOUNDATION FOR PERIPHERAL NEUROPATHY</li>
+              <li><a href="https://www.braintrauma.org/" target="_blank">THE BRAIN TRAUMA FOUNDATION</li>
+              <li><a href="http://www.alsa.org/" target="_blank">ALS ASSOCIATION</li>
             </ul>
             
           </div>
