finished revising links

--- a/home.html
+++ b/home.html
@@ -63,7 +63,7 @@
           <button type="button" class="useful-links btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">PATIENT INFORMATION <span class="caret"></span></button>
           <ul class="dropdown-menu">
             <li><a href="http://www.drbenmoshe.com/useful-links.html">Useful Links</a></li>
-            <li><a href="http://www.drbenmoshe.com/presentations-conciousness.html">Presentations</a></li>
+            <li><a href="http://www.drbenmoshe.com/presentations.html">Presentations</a></li>
           </ul>
           
         </div>
