--- a/insurance-providers.html
+++ b/insurance-providers.html
@@ -45,34 +45,34 @@
 
         <div class="btn-group" role="group">
 
-          <a ui-sref="home({reload: true})" ><button type="button" class="home btn btn-info">HOME<span class="glyphicon glyphicon-home"></span></button></a>
+          <a href="http://www.drbenmoshe.com/home.html" ><button type="button" class="home btn btn-info">HOME<span class="glyphicon glyphicon-home"></span></button></a>
         </div>
 
         <div class="btn-group" role="group">
           <button type="button" class="about btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">ABOUT US <span class="caret"></span></button> 
           <ul class="dropdown-menu">
-            <li><a ui-sref="danny-benmoshe">DANNY BENMOSHE, M.D.</a></li>
+            <li><a href="http://www.drbenmoshe.com/danny-benmoshe.html">DANNY BENMOSHE, M.D.</a></li>
             <li><a href="Medical-Form.pdf" download>Medical Forms</a></li>
-            <li><a ui-sref="insurance-providers">Insurance Providers</a></li>
-            <li><a ui-sref="disorders-procedures">Disorders/Procedures</a></li>
+            <li><a href="http://www.drbenmoshe.com/insurance-providers.html">Insurance Providers</a></li>
+            <li><a href="http://www.drbenmoshe.com/disorders-procedures.html">Disorders/Procedures</a></li>
           </ul>
         </div>
 
         <div class="btn-group" role="group">
           <button type="button" class="useful-links btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">PATIENT INFORMATION <span class="caret"></span></button>
           <ul class="dropdown-menu">
-            <li><a ui-sref="useful-links">Useful Links</a></li>
-            <li><a ui-sref="presentations">Presentations</a></li>
+            <li><a href="http://www.drbenmoshe.com/useful-links.html">Useful Links</a></li>
+            <li><a href="http://www.drbenmoshe.com/presentations.html">Presentations</a></li>
           </ul>
           
         </div>
 
         <div class="btn-group" role="group">
-          <a ui-sref="reviews"><button type="button" class="reviews btn btn-info">REVIEWS</button></a>
+          <a href="http://www.drbenmoshe.com/reviews.html"><button type="button" class="reviews btn btn-info">REVIEWS</button></a>
         </div>
 
         <div class="btn-group" role="group">
-          <a ui-sref="contact-us"><button type="button" class="contact-us btn btn-info">CONTACT US</button></a>
+          <a href="http://www.drbenmoshe.com/contact-us.html"><button type="button" class="contact-us btn btn-info">CONTACT US</button></a>
         </div>
 
       </div><!-- end of btn-group div -->
@@ -153,10 +153,10 @@
   <!-- bread crumbs code -->
   <div class="breadCrumbs text-center">
 
-    <a ui-sref="home" class="col-xs-3">Home</a>
-    <a ui-sref="danny-benmoshe" class="col-xs-3">About Us</a>
-    <a ui-sref="reviews" class="col-xs-3">Reviews</a>
-    <a ui-sref="contact-us" class="col-xs-3">Contact Us</a>
+    <a href="http://www.drbenmoshe.com/home.html" class="col-xs-3">Home</a>
+    <a href="http://www.drbenmoshe.com/danny-benmoshe.html" class="col-xs-3">About Us</a>
+    <a href="http://www.drbenmoshe.com/reviews.html" class="col-xs-3">Reviews</a>
+    <a href="http://www.drbenmoshe.com/contact-us.html" class="col-xs-3">Contact Us</a>
 
   </div><!-- end of breadCrumbs div -->
 
