some style modification

--- a/contact-us.html
+++ b/contact-us.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Dr. Danny Benmoshe</title>
+  <title>Dr. Danny Benmoshe - Neurologist in Santa Monica - Contact Page</title>
   <link rel="icon" type="image/x-icon" href="images/favicon.ico" /> 
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+   <meta name="description" content="Dr. Danny Benmoshe's office is located in 2001 Santa Monica Blvd, Suite 880 West, Santa Monica, CA 90404. Call (310)-315-1456 or click on the ZocDoc link to make an appointment. Dr. Benmoshe specializes in headaches, Parkinsons, tremors, movement disorders, dementias, memory problems, epilepsy, and fainting spells. He speaks fluent Spanish, Hebrew, and Farsi and has a very holistic approach to Neurology">
 </head>
 
 <div class="container">
@@ -23,18 +24,20 @@
 
       <header>
         <div class="col-xs-6 name-address">
-
+       
           <h2>Danny Benmoshe, M.D. | Neurologist</h2>
-          <h3>2001 Santa Monica Blvd, Suite 880 West,</h3> 
+           <a href="https://www.google.com/maps/place/2001+Santa+Monica+Blvd,+Santa+Monica,+CA+90404/@34.0291679,-118.4821986,17z/data=!3m1!4b1!4m2!3m1!1s0x80c2bb49fdb5c7fb:0x3dd75e3c8e3d029d" target="_blank">
+          <h3>2001 Santa Monica Blvd, Suite 880 West,</h3>
           <h3>Santa Monica, CA 90404</h3>
+        </a>
         </div>
 
         <div class="col-xs-6 text-right">
 
           <h2>Make an appointment</h2>
-          <h5><span class="glyphicon glyphicon-phone-alt"></span> (310) 315-1456</h5>
+          <h5 class="phone"><span class="glyphicon glyphicon-phone-alt"></span> (310) 315-1456</h5>
           
-          <h7>Or Click</h7>  <button class="btn btn-success" id="heading-button"><a href="https://www.zocdoc.com/doctor/danny-benmoshe-md-132541"><img src="images/ZocDoc-logo.jpg" alt=""  id="heading-image"></a></button>
+          <h7 class="phone">Or Click</h7>  <button class="btn btn-success" id="heading-button"><a href="https://www.zocdoc.com/doctor/danny-benmoshe-md-132541"><img src="images/ZocDoc-logo.jpg" alt=""  id="heading-image"></a></button>
           <p id="espanol">Se habla espñol</p>
         </div>
       </header>
