--- a/danny-benmoshe.html
+++ b/danny-benmoshe.html
@@ -23,19 +23,19 @@
 
       <header>
         <div class="col-xs-6 name-address">
-
+       
           <h2>Danny Benmoshe, M.D. | Neurologist</h2>
+           <a href="https://www.google.com/maps/place/2001+Santa+Monica+Blvd,+Santa+Monica,+CA+90404/@34.0291679,-118.4821986,17z/data=!3m1!4b1!4m2!3m1!1s0x80c2bb49fdb5c7fb:0x3dd75e3c8e3d029d" target="_blank">
           <h3>2001 Santa Monica Blvd, Suite 880 West,</h3>
           <h3>Santa Monica, CA 90404</h3>
-
+        </a>
         </div>
-
         <div class="col-xs-6 text-right">
 
           <h2>Make an appointment</h2>
-          <h5><span class="glyphicon glyphicon-phone-alt"></span> (310) 315-1456</h5>
+          <h5 class="phone"><span class="glyphicon glyphicon-phone-alt"></span> (310) 315-1456</h5>
           
-          <h7>Or Click</h7>  <button class="btn btn-success" id="heading-button"><a href="https://www.zocdoc.com/doctor/danny-benmoshe-md-132541"><img src="images/ZocDoc-logo.jpg" alt=""  id="heading-image"></a></button>
+          <h7 class="phone">Or Click</h7>  <button class="btn btn-success" id="heading-button"><a href="https://www.zocdoc.com/doctor/danny-benmoshe-md-132541"><img src="images/ZocDoc-logo.jpg" alt=""  id="heading-image"></a></button>
           <p id="espanol">Se habla espñol</p>
 
         </div>
