--- a/contact-us.html
+++ b/contact-us.html
@@ -121,7 +121,7 @@
           </div>
 
           <div class="col-xs-6">
-            <img src="images/Office-map.png" class="img-responsive" alt="Responsive image">
+            <img src="images/Office-map.png" class="img-responsive" alt="Responsive image of the map of the office location">
           </div>
 
         </div>
@@ -140,6 +140,7 @@
       <a href="http://www.drbenmoshe.com/contact-us.html" class="col-xs-3">Contact Us</a>
 
     </div><!-- end of breadCrumbs div -->
+    <h4 class="text-right promo">Another <a href="http://www.eyalbenmoshe.com/" class="ebm-link" target="_blank">EBM26 </a>Creation</h4><br>
 
   </div><!-- end of row div -->
 
