--- a/danny-benmoshe.html
+++ b/danny-benmoshe.html
@@ -118,7 +118,7 @@
               His fellowship training in Neurophysiology enables him to perform specific diagnostic testing including electro-encephalograms (EEGs) and electromyograms/nerve conduction studies (EMG/NCVs) for the diagnosis of seizures and nerve/muscle disorders respectively.<br><br>
               Dr. Benmoshe also has additional interest and training in the treatment of headaches and movement disorders such as Parkinson’s.  He uses a holistic approach to treatment that includes pharmacotherapy, physical therapy, Botox injections (for migraines) and diet and lifestyle changes.  Furthermore, Dr. Benmoshe’s integrated method focuses on the mind and body connection that is affected in various neurological conditions.<br><br>
               Dr. Benmoshe’s dedication to the field of neurology began during his time as an undergraduate student at UCLA while taking his neuroscience courses.  It is during this time that his exposure to the study of the brain/mind has made him inspired in pursuing a career as a neurologist.  He is dedicated to his continuing medical education and attends conferences around the country in his field.<br><br> </h4>
-              <img src="images/DannyBenmoshe.jpg" alt="" class="col-xs-4 DannyPic">
+              <img src="images/DannyBenmoshe.jpg" alt="a picture of Dr Danny Benmoshe" class="col-xs-4 DannyPic">
               <h4 class="col-xs-12">
                 Dr. Benmoshe received his training: <br><br>
 
@@ -145,7 +145,7 @@
 
               
 
-              <img src="images/danny-patient.jpg" alt="" class="col-xs-12 dannyPatient img-responsive" alt="Responsive image">
+              <img src="images/danny-patient.jpg" alt="picture of Dr Danny Benmoshe with a patient" class="col-xs-12 dannyPatient img-responsive" alt="Responsive image">
             </div><!-- end of dannyStory div -->
 
           </div><!-- end of row div -->
@@ -164,6 +164,7 @@
         <a href="http://www.drbenmoshe.com/contact-us.html" class="col-xs-3">Contact Us</a>
 
       </div><!-- end of breadCrumbs div -->
+      <h4 class="text-right promo">Another <a href="http://www.eyalbenmoshe.com/" class="ebm-link" target="_blank">EBM26 </a>Creation</h4><br>
 
     </div><!-- end of row div -->
 
