--- a/home.html
+++ b/home.html
@@ -120,7 +120,7 @@
          </div>
 
          <div class="col-xs-3">
-          <img src="images/NakedLogo.png" alt="" class="logoBottom">
+          <img src="images/NakedLogo.png" alt="Dr Danny Benmoshe's logo of a brain with a stetiscope" class="logoBottom">
         </div>
 
         <div class="col-xs-5 missionStatement">
@@ -143,7 +143,10 @@
     <a href="http://www.drbenmoshe.com/reviews.html" class="col-xs-3">Reviews</a>
     <a href="http://www.drbenmoshe.com/contact-us.html" class="col-xs-3">Contact Us</a>
 
+
+
   </div><!-- end of breadCrumbs div -->
+ <h4 class="text-right promo">Another <a href="http://www.eyalbenmoshe.com/" class="ebm-link" target="_blank">EBM26 </a>Creation</h4><br>
 
 </div><!-- end of row div -->
 
