--- a/insurance-providers.html
+++ b/insurance-providers.html
@@ -120,15 +120,15 @@
                <th><h3>PPO/POS</h3></th> 
              </tr>
              <tr>
-              <td><img src="images/aetna.png" alt="" class="AetnaPhoto"></td>
-              <td><img src="images/BlueCross.jpeg" alt="" class="BlueCrossPhoto"></td>
-              <td><img src="images/BlueShield.jpeg" alt="" class="BlueShieldPhoto"></td>
+              <td><img src="images/aetna.png" alt="picture of Aetna logo" class="AetnaPhoto"></td>
+              <td><img src="images/BlueCross.jpeg" alt="picture of Blue Cross logo" class="BlueCrossPhoto"></td>
+              <td><img src="images/BlueShield.jpeg" alt="picture of Blue Shield logo" class="BlueShieldPhoto"></td>
             </tr>
             <tr>
-              <td><img src="images/Cigna.jpeg" alt="" class="CignaPhoto"></td>
-              <td><img src="images/HealthNet.png" alt="" class="HealthNetPhoto"></td>
-              <td><img src="images/Humana.jpeg" alt="" class="HumanaPhoto"></td>
-              <td><img src="images/UnitedHealthcare.jpg" alt="" class="UnitedHealthcarePhoto"></td>
+              <td><img src="images/Cigna.jpeg" alt="picture of Cigna logo" class="CignaPhoto"></td>
+              <td><img src="images/HealthNet.png" alt="picture of Health Net logo" class="HealthNetPhoto"></td>
+              <td><img src="images/Humana.jpeg" alt="picture of Humana logo" class="HumanaPhoto"></td>
+              <td><img src="images/UnitedHealthcare.jpg" alt="picture of United Healthcare logo" class="UnitedHealthcarePhoto"></td>
             </tr>
 
           </table>
@@ -160,6 +160,7 @@
     <a href="http://www.drbenmoshe.com/contact-us.html" class="col-xs-3">Contact Us</a>
 
   </div><!-- end of breadCrumbs div -->
+  <h4 class="text-right promo">Another <a href="http://www.eyalbenmoshe.com/" class="ebm-link" target="_blank">EBM26 </a>Creation</h4><br>
 
 </div><!-- end of row div -->
 
