--- a/reviews.html
+++ b/reviews.html
@@ -112,7 +112,7 @@
         <div class="row"><br>
 
           <h2 class="text-center"><u>Reviews of Dr. Benmoshe</u></h2><br>
-          <img src="images/danny-patient.jpg" alt="" class="review-image col-xs-6">
+          <img src="images/danny-patient.jpg" alt="picture of Dr Benmoshe examining a patient" class="review-image col-xs-6">
           <h4 class="col-xs-6"><u class="patient-review">Aug 2nd, 2015</u><span class="review-text"> - I've been a patient of Dr. Benmoshe's for four years. He's an excellent doctor: very thorough, follows through, and returns phone calls. Just a nice guy overall, as well.</span><br>
             <a href="http://www.vitals.com/doctors/Dr_Danny_Benmoshe/reviews" class="review-link" target="_blank">See actual review on Vitals Site</a>
           </h4>
@@ -153,6 +153,7 @@
       <a href="http://www.drbenmoshe.com/contact-us.html" class="col-xs-3">Contact Us</a>
 
     </div><!-- end of breadCrumbs div -->
+    <h4 class="text-right promo">Another <a href="http://www.eyalbenmoshe.com/" class="ebm-link" target="_blank">EBM26 </a>Creation</h4><br>
 
   </div><!-- end of row div -->
 
