--- a/disorders-procedures.html
+++ b/disorders-procedures.html
@@ -200,6 +200,7 @@
       <a href="http://www.drbenmoshe.com/contact-us.html" class="col-xs-3">Contact Us</a>
 
     </div><!-- end of breadCrumbs div -->
+    <h4 class="text-right promo">Another <a href="http://www.eyalbenmoshe.com/" class="ebm-link" target="_blank">EBM26 </a>Creation</h4><br>
 
   </div><!-- end of row div -->
 
