review text modified and spell check finished

--- a/headache-overview.html
+++ b/headache-overview.html
@@ -42,7 +42,7 @@
         </div>
         </header>
 
-        <!-- beggining buttons code -->
+        <!-- beginning buttons code -->
         <div class="btn-group btn-group-justified allButtons" role="group" aria-label="...">
 
           <div class="btn-group" role="group">
@@ -79,7 +79,7 @@
 
      </div><!-- end of btn-group div -->
 
-                   <!-- beginning of carosel code -->
+                   <!-- beginning of carousel code -->
 
       <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="3500">
 
@@ -284,8 +284,8 @@ $(window).load(function() {
 </script>
 
 <ul class="text-center" id="presentaion-ul">
-  <li><a href="#" class="presentation-link">View a presentaion on Obstructive Sleep Apnea</a></li>  
-  <li><a href="#" class="presentation-link">View a presentation on the Chronic Disorders of Conciousness</a></li>
+  <li><a href="#" class="presentation-link">View a presentation on Obstructive Sleep Apnea</a></li>  
+  <li><a href="#" class="presentation-link">View a presentation on the Chronic Disorders of Consciousness</a></li>
 
 </ul>
 
