--- a/presentations.html
+++ b/presentations.html
@@ -42,7 +42,7 @@
         </div>
         </header>
 
-        <!-- beggining buttons code -->
+        <!-- beginning buttons code -->
         <div class="btn-group btn-group-justified allButtons" role="group" aria-label="...">
 
           <div class="btn-group" role="group">
@@ -78,7 +78,7 @@
           </div>
 
      </div><!-- end of btn-group div -->
-      <!-- beginning of carosel code -->
+      <!-- beginning of carousel code -->
 
       <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="3500">
 
@@ -108,7 +108,7 @@
       </script>
 
 
-<h1 class="text-center"><u>Chronic Disorders of Conciousness</u></h1>
+<h1 class="text-center"><u>Chronic Disorders of Consciousness</u></h1>
 
 <div class="flexslider">
   <ul class="slides">
@@ -213,8 +213,8 @@ $(window).load(function() {
 </script>
 
 <ul class="text-center" id="presentaion-ul">
-  <li><a href="#" class="presentation-link">View a presentaion on Obstructive Sleep Apnea</a></li>  
-  <li><a href="#" class="presentation-link">View an Overview of Headaches Presentaion</a></li>
+  <li><a href="#" class="presentation-link">View a presentation on Obstructive Sleep Apnea</a></li>  
+  <li><a href="#" class="presentation-link">View an Overview of Headaches Presentation</a></li>
 
 </ul>
 
