--- a/contact-us.html
+++ b/contact-us.html
@@ -8,7 +8,6 @@
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.5.0/flexslider.min.css">
    <link href='https://fonts.googleapis.com/css?family=Lora|Inconsolata|Pacifico|Architects+Daughter|Bangers|Kaushan+Script|Droid+Sans+Mono|Audiowide|Calligraffitti' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -79,7 +78,7 @@
 
       </div><!-- end of btn-group div -->
 
-      <!-- beginning of carosel code -->
+      <!-- beginning of carousel code -->
 
       <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="3500">
 
