--- a/danny-benmoshe.html
+++ b/danny-benmoshe.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Dr. Danny Benmoshe</title>
+  <title>Dr. Danny Benmoshe - Neurologist in Santa Monica - About Dr. Danny Benmoshe</title>
   <link rel="icon" type="image/x-icon" href="images/favicon.ico" /> 
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.5.0/flexslider.min.css">
   <link href='https://fonts.googleapis.com/css?family=Lora|Inconsolata|Pacifico|Architects+Daughter|Bangers|Kaushan+Script|Droid+Sans+Mono|Audiowide|Calligraffitti' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <meta name="description" content="Dr. Danny Benmoshe learned medicine at  Albert Einstein College of Medicine and performed his internship, residency, and fellowship at Harbor-UCLA Medical Center Department of Neurology. His fellowship training in Neurophysiology enables him to perform specific diagnostic testing including electro-encephalograms (EEGs) and electromyograms/nerve conduction studies (EMG/NCVs) for the diagnosis of seizures and nerve/muscle disorders respectively.">
 </head>
 
 <div class="container">
@@ -41,7 +41,7 @@
         </div>
       </header>
 
-      <!-- beggining buttons code -->
+      <!-- beginning buttons code -->
       <div class="btn-group btn-group-justified allButtons" role="group" aria-label="...">
 
         <div class="btn-group" role="group">
@@ -78,7 +78,7 @@
 
       </div><!-- end of btn-group div -->
 
-           <!-- beginning of carosel code -->
+           <!-- beginning of carousel code -->
 
       <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="3500">
 
