--- a/disorders-procedures.html
+++ b/disorders-procedures.html
@@ -8,7 +8,6 @@
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.5.0/flexslider.min.css">
   <link rel="stylesheet" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
@@ -39,7 +38,7 @@
         </div>
       </header>
 
-      <!-- beggining buttons code -->
+      <!-- beginning buttons code -->
       <div class="btn-group btn-group-justified allButtons" role="group" aria-label="...">
 
         <div class="btn-group" role="group">
@@ -76,7 +75,7 @@
 
       </div><!-- end of btn-group div -->
 
-            <!-- beginning of carosel code -->
+            <!-- beginning of carousel code -->
 
       <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="3500">
 
