--- a/useful-links.html
+++ b/useful-links.html
@@ -8,7 +8,6 @@
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.5.0/flexslider.min.css">
   <link rel="stylesheet" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
@@ -41,7 +40,7 @@
         </div>
       </header>
 
-      <!-- beggining buttons code -->
+      <!-- beginning buttons code -->
       <div class="btn-group btn-group-justified allButtons" role="group" aria-label="...">
 
         <div class="btn-group" role="group">
@@ -78,7 +77,7 @@
 
       </div><!-- end of btn-group div -->
 
-      <!-- beginning of carosel code -->
+      <!-- beginning of carousel code -->
 
       <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="3500">
 
