changes so far before final deployment

--- a/disorders-procedures.html
+++ b/disorders-procedures.html
@@ -33,8 +33,8 @@
           <h2>Make an appointment</h2>
           <h5 class="phone"><span class="glyphicon glyphicon-phone-alt"></span> (310) 315-1456</h5>
           
-          <h7 class="phone">Or Click</h7>  <button class="btn btn-success" id="heading-button"><a href="https://www.zocdoc.com/doctor/danny-benmoshe-md-132541"><img src="images/ZocDoc-logo.jpg" alt=""  id="heading-image"></a></button>
-          <p id="espanol">Se habla espñol</p>
+          <h7 class="phone">Or Click</h7>  <button class="btn btn-success" id="heading-button"><a href="https://www.zocdoc.com/doctor/danny-benmoshe-md-132541" target="_blank"><img src="images/ZocDoc-logo.jpg" alt=""  id="heading-image"></a></button>
+          <p id="espanol">Se habla español</p>
         </div>
       </header>
 
@@ -43,34 +43,34 @@
 
         <div class="btn-group" role="group">
 
-          <a href="http://www.drbenmoshe.com/home.html" ><button type="button" class="home btn btn-info">HOME<span class="glyphicon glyphicon-home"></span></button></a>
+          <a href="index.html" ><button type="button" class="home btn btn-info">HOME<span class="glyphicon glyphicon-home"></span></button></a>
         </div>
 
         <div class="btn-group" role="group">
           <button type="button" class="about btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">ABOUT US <span class="caret"></span></button> 
           <ul class="dropdown-menu">
-            <li><a href="http://www.drbenmoshe.com/danny-benmoshe.html">DANNY BENMOSHE, M.D.</a></li>
+            <li><a href="danny-benmoshe.html">DANNY BENMOSHE, M.D.</a></li>
             <li><a href="Medical-Form.pdf" download>Medical Forms</a></li>
-            <li><a href="http://www.drbenmoshe.com/insurance-providers.html">Insurance Providers</a></li>
-            <li><a href="http://www.drbenmoshe.com/disorders-procedures.html">Disorders/Procedures</a></li>
+            <li><a href="insurance-providers.html">Insurance Providers</a></li>
+            <li><a href="disorders-procedures.html">Disorders/Procedures</a></li>
           </ul>
         </div>
 
         <div class="btn-group" role="group">
           <button type="button" class="useful-links btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">PATIENT INFORMATION <span class="caret"></span></button>
           <ul class="dropdown-menu">
-            <li><a href="http://www.drbenmoshe.com/useful-links.html">Useful Links</a></li>
-            <li><a href="http://www.drbenmoshe.com/presentations.html">Presentations</a></li>
+            <li><a href="useful-links.html">Useful Links</a></li>
+            <li><a href="presentations.html">Presentations</a></li>
           </ul>
           
         </div>
 
         <div class="btn-group" role="group">
-          <a href="http://www.drbenmoshe.com/reviews.html"><button type="button" class="reviews btn btn-info">REVIEWS</button></a>
+          <a href="reviews.html"><button type="button" class="reviews btn btn-info">REVIEWS</button></a>
         </div>
 
         <div class="btn-group" role="group">
-          <a href="http://www.drbenmoshe.com/contact-us.html"><button type="button" class="contact-us btn btn-info">CONTACT US</button></a>
+          <a href="contact-us.html"><button type="button" class="contact-us btn btn-info">CONTACT US</button></a>
         </div>
 
       </div><!-- end of btn-group div -->
@@ -193,10 +193,10 @@
     <!-- bread crumbs code -->
     <div class="breadCrumbs text-center">
 
-      <a href="http://www.drbenmoshe.com/home.html" class="col-xs-3">Home</a>
-      <a href="http://www.drbenmoshe.com/danny-benmoshe.html" class="col-xs-3">About Us</a>
-      <a href="http://www.drbenmoshe.com/reviews.html" class="col-xs-3">Reviews</a>
-      <a href="http://www.drbenmoshe.com/contact-us.html" class="col-xs-3">Contact Us</a>
+      <a href="index.html" class="col-xs-3">Home</a>
+      <a href="danny-benmoshe.html" class="col-xs-3">About Us</a>
+      <a href="reviews.html" class="col-xs-3">Reviews</a>
+      <a href="contact-us.html" class="col-xs-3">Contact Us</a>
 
     </div><!-- end of breadCrumbs div -->
     <h4 class="text-right promo">Another <a href="http://www.eyalbenmoshe.com/" class="ebm-link" target="_blank">EBM26 </a>Creation</h4><br>
